k8s/redirect-service/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: redirect-service-ingress
  namespace: url-shortener
spec:
  entryPoints: 
  - web
  routes:
  - match: Host(`localhost`) && PathPrefix(`/r`)
    kind: Rule
    middlewares: 
    - name: redirect-stripprefix
    services:
    - name: redirect-service
      port: http
